Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26485

ProjectExplorer::PortsGatherer fails to work on Windows.

    XMLWordPrintable

Details

    • 6ae36127bf8e8847b8dd92f514df7ae831473764 (qt-creator/qt-creator/6.0)

    Description

      The gathering of ports on Desktop/Windows is done by executing 'netstat' (see DesktopPortsGatheringMethod). However, at least on Windows, the command needs to be set with complete path (e.g. C:\Windows\System32\NETSTAT.EXE). Otherwis it fails, as it currently does.

      Qt Creator debug output:

      QtcProcess::start: Empty environment set when running 'netstat'.

      Application output, when trying to launch a WebAssembly project.

      13:19:18: Checking available ports...
      13:19:18: Connection error: The program "" does not exist or is not executable.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-26485
        # Subject Branch Project Status CR V

        Activity

          People

            hjk hjk
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes